--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.14.1",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "apollo-server-micro": "^3.12.0",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
+    "graphql": "^16.6.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
