--- a/package.json
+++ b/package.json
@@ -10,19 +10,25 @@
   },
   "dependencies": {
     "@prisma/client": "^4.14.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "apollo-server-micro": "^3.12.0",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.0",
     "next": "13.4.3",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "prisma": "^4.14.1"
   }
 }
